--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Admin Panel</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <style>
       body {
         font-family: Arial, sans-serif;
@@ -115,9 +119,43 @@
         margin-top: 10px;
         display: block;
       }
+      li img {
+    max-width: 100px; /* Установите желаемую максимальную ширину */
+    height: auto; /* Высота будет автоматически подстраиваться для сохранения пропорций */
+  }
+
+
+      
+      .navbar {
+        overflow: hidden;
+        background-color: #333;
+      }
+
+      .navbar a {
+        float: left;
+        display: block;
+        color: #f2f2f2;
+        text-align: center;
+        padding: 14px 20px;
+        text-decoration: none;
+      }
+
+      .navbar a:hover {
+        background-color: #ddd;
+        color: black;
+      }
+
+      .navbar a.active {
+        background-color: #4caf50;
+        color: white;
+      }
     </style>
   </head>
   <body>
+    
+    <%- include('navbar.ejs') %>.
+
+
     <h1>Admin Panel</h1>
     <form id="addItemForm" action="/api/items" method="POST">
       <label for="image1">Image 1:</label>
