--- a/views/main.ejs
+++ b/views/main.ejs
@@ -4,136 +4,214 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Main Page</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <style>
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
+              * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+      }
 
-body {
-    font-family: Arial, sans-serif;
-    background-color: #f0f0f0;
-    color: #333;
-    margin: 0;
-    padding: 20px;
-}
+      body {
+        font-family: Arial, sans-serif;
+        background-color: #f0f0f0;
+        color: #333;
+        margin: 0;
+        padding: 20px;
+      }
 
-h1 {
-    text-align: center;
-    margin-bottom: 20px;
-}
+      h1 {
+        text-align: center;
+        margin-bottom: 20px;
+      }
 
-button#switchLanguage {
-    display: block;
-    margin: 0 auto 20px;
-    padding: 10px 20px;
-    background-color: #4CAF50;
-    color: white;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-}
+      button#switchLanguage {
+        display: block;
+        margin: 0 auto 20px;
+        padding: 10px 20px;
+        background-color: #4caf50;
+        color: white;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+      }
 
-ul {
-    list-style: none;
-}
+      ul {
+        list-style: none;
+      }
 
-li {
-    background-color: #fff;
-    border: 1px solid #ddd;
-    border-radius: 5px;
-    padding: 20px;
-    margin-bottom: 20px;
-}
+      li {
+        list-style-type:  none;
+        background-color: #fff;
+        border: 1px solid #ddd;
+        border-radius: 5px;
+        padding: 20px;
+        margin-bottom: 20px;
+      }
 
-strong {
-    font-weight: bold;
-}
+      strong {
+        font-weight: bold;
+      }
 
-strong.itemName,
-strong.itemDescription {
-    display: block;
-    margin-bottom: 5px;
-}
+      strong.itemName,
+      strong.itemDescription {
+        display: block;
+        margin-bottom: 5px;
+      }
 
-span.itemNameValue,
-span.itemDescriptionValue {
-    display: inline-block;
-    margin-bottom: 10px;
-}
+      span.itemNameValue,
+      span.itemDescriptionValue {
+        display: inline-block;
+        margin-bottom: 10px;
+      }
 
-img {
-    max-width: 100%;
-    height: auto;
-    margin-bottom: 10px;
-    border-radius: 5px;
-}
+      img {
+        max-width: 100%;
+        height: auto;
+        margin-bottom: 10px;
+        border-radius: 5px;
+      }
 
-[data-lang="ru"] {
-    display: none;
-}
+      [data-lang="ru"] {
+        display: none;
+      }
+      li img {
+        max-width: 100px; /* Установите желаемую максимальную ширину */
+        height: auto; /* Высота будет автоматически подстраиваться для сохранения пропорций */
+      }
+      .carousel-caption {
+        background: rgba(0, 0, 0, 0.5);
+        color: white;
+        padding: 10px;
+        border-radius: 5px;
+      }
+      .carousel-item img {
+        max-width: 100%;
+        height: auto;
+        width: 30%; /* Установите желаемую ширину */
+        height: 600px; /* Установите желаемую высоту */
+        object-fit: cover; /* Сохранить пропорции и обрезать изображение, чтобы оно полностью заполнило контейнер */
+      }
 
+      .navbar {
+        overflow: hidden;
+        background-color: #333;
+      }
+
+      .navbar a {
+        float: left;
+        display: block;
+        color: #f2f2f2;
+        text-align: center;
+        padding: 14px 20px;
+        text-decoration: none;
+      }
+
+      .navbar a:hover {
+        background-color: #ddd;
+        color: black;
+      }
+
+      .navbar a.active {
+        background-color: #4caf50;
+        color: white;
+      }
+      footer {
+            text-align: center;
+            padding: 20px 0;
+            background-color: #333;
+            color: white;
+        }
     </style>
 </head>
 <body>
+    <%- include('navbar.ejs') %>.
+
     <button id="switchLanguage">Switch Language</button>
 
-    <h1>Main Page</h1>
-    <ul>
-        <% items.forEach((item, index) => { %>
-            <li class="language-switchable">
-                <strong>Images:</strong>
-                <% item.images.forEach(image => { %>
-                    <img src="<%= image %>" alt="Item Image">
-                <% }); %><br>
-                
-                <strong class="itemName" data-lang="en">Name (English):</strong>
-                <strong class="itemName" data-lang="ru" style="display:none;">Name (Russian):</strong>
-                <span class="itemNameValue" data-lang="en">
-                    <% const englishName = item.names.find(name => name.lang === 'en'); %>
-                    <%= englishName ? englishName.value : 'N/A' %>
-                </span>
-                <span class="itemNameValue" data-lang="ru" style="display:none;">
-                    <% const russianName = item.names.find(name => name.lang === 'ru'); %>
-                    <%= russianName ? russianName.value : 'N/A' %>
-                </span><br>
-                
-                <strong class="itemDescription" data-lang="en">Description (English):</strong>
-                <strong class="itemDescription" data-lang="ru" style="display:none;">Description (Russian):</strong>
-                <span class="itemDescriptionValue" data-lang="en">
-                    <% const englishDescription = item.descriptions.find(description => description.lang === 'en'); %>
-                    <%= englishDescription ? englishDescription.value : 'N/A' %>
-                </span>
-                <span class="itemDescriptionValue" data-lang="ru" style="display:none;">
-                    <% const russianDescription = item.descriptions.find(description => description.lang === 'ru'); %>
-                    <%= russianDescription ? russianDescription.value : 'N/A' %>
-                </span><br>
-                
-            </li>
-        <% }); %>
-    </ul>
+    <div class="container">
+        <div class="row">
+            <% items.forEach((item, index) => { %>
+                <div class="col-md-6">
+                    <li class="language-switchable">
+                        <div id="carousel<%= index %>" class="carousel slide" data-ride="carousel">
+                            <div class="carousel-inner">
+                                <% item.images.forEach((image, imageIndex) => { %>
+                                    <div class="carousel-item <%= imageIndex === 0 ? 'active' : '' %>">
+                                        <img src="<%= image %>" class="d-block w-100" alt="Item Image">
+                                    </div>
+                                <% }); %>
+                            </div>
+                            <a class="carousel-control-prev" href="#carousel<%= index %>" role="button" data-slide="prev">
+                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                <span class="sr-only">Previous</span>
+                            </a>
+                            <a class="carousel-control-next" href="#carousel<%= index %>" role="button" data-slide="next">
+                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                <span class="sr-only">Next</span>
+                            </a>
+                        </div>
+                        <br>
+                        <strong class="itemName" data-lang="en">Name:</strong>
+                        <strong class="itemName" data-lang="ru" style="display:none;">Называние:</strong>
+                        <span class="itemNameValue" data-lang="en">
+                            <% const englishName = item.names.find(name => name.lang === 'en'); %>
+                            <%= englishName ? englishName.value : 'N/A' %>
+                        </span>
+                        <span class="itemNameValue" data-lang="ru" style="display:none;">
+                            <% const russianName = item.names.find(name => name.lang === 'ru'); %>
+                            <%= russianName ? russianName.value : 'N/A' %>
+                        </span>
+                        <br>
+                        <strong class="itemDescription" data-lang="en">Description:</strong>
+                        <strong class="itemDescription" data-lang="ru" style="display:none;">Описание:</strong>
+                        <span class="itemDescriptionValue" data-lang="en">
+                            <% const englishDescription = item.descriptions.find(description => description.lang === 'en'); %>
+                            <%= englishDescription ? englishDescription.value : 'N/A' %>
+                        </span>
+                        <span class="itemDescriptionValue" data-lang="ru" style="display:none;">
+                            <% const russianDescription = item.descriptions.find(description => description.lang === 'ru'); %>
+                            <%= russianDescription ? russianDescription.value : 'N/A' %>
+                        </span>
+                        <br>
+                    </li>
+                </div>
+            <% }); %>
+        </div>
+    </div>
+    <footer>
+        <p>Created by Erbayan, Group SE-2205</p>
+    </footer>
     <script>
-        let currentLanguage = 'en';
+             $(".carousel").carousel();
+      let currentLanguage = "en";
 
-        const switchLanguageButton = document.getElementById('switchLanguage');
+      const switchLanguageButton = document.getElementById("switchLanguage");
 
-        function toggleLanguage() {
-            currentLanguage = currentLanguage === 'en' ? 'ru' : 'en';
-            switchLanguageButton.textContent = currentLanguage === 'en' ? 'Switch to Russian' : 'Switch to English';
+      function toggleLanguage() {
+        currentLanguage = currentLanguage === "en" ? "ru" : "en";
+        switchLanguageButton.textContent =
+          currentLanguage === "en" ? "Switch to Russian" : "Switch to English";
 
-            const languageSwitchableElements = document.querySelectorAll('.language-switchable');
+        const languageSwitchableElements = document.querySelectorAll(
+          ".language-switchable"
+        );
 
-            languageSwitchableElements.forEach(element => {
-                const itemsToToggle = element.querySelectorAll(`[data-lang="${currentLanguage}"], [data-lang]:not([data-lang="${currentLanguage}"])`);
-                itemsToToggle.forEach(item => {
-                    
-                    item.style.display = item.style.display === 'none' ? 'inline' : 'none';
-                });
-            });
-        }
+        languageSwitchableElements.forEach((element) => {
+          const itemsToToggle = element.querySelectorAll(
+            `[data-lang="${currentLanguage}"], [data-lang]:not([data-lang="${currentLanguage}"])`
+          );
+          itemsToToggle.forEach((item) => {
+            item.style.display =
+              item.style.display === "none" ? "inline" : "none";
+          });
+        });
+      }
 
-        switchLanguageButton.addEventListener('click', toggleLanguage);
+      switchLanguageButton.addEventListener("click", toggleLanguage);
     </script>
 </body>
 </html>
