--- a/views/news.ejs
+++ b/views/news.ejs
@@ -6,11 +6,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Новости о телефонах</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-1BmE4kWBq78jMm4465Fe6FJYA7IJG1gV0M1LaPofn8WBwTZQhAIW+hXnjk9aIVJj" crossorigin="anonymous">
-    <style>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
-
+<style>
       body {
         font-family: Arial, sans-serif;
         margin: 0;
@@ -66,10 +67,37 @@
       a:hover {
         text-decoration: underline;
       }
+      /* public/stylesheets/navbar.css */
+
+      .navbar {
+        overflow: hidden;
+        background-color: #333;
+      }
+
+      .navbar a {
+        float: left;
+        display: block;
+        color: #f2f2f2;
+        text-align: center;
+        padding: 14px 20px;
+        text-decoration: none;
+      }
+
+      .navbar a:hover {
+        background-color: #ddd;
+        color: black;
+      }
+
+      .navbar a.active {
+        background-color: #4caf50;
+        color: white;
+      }
+
     </style>
   </head>
   <body>
-    <%- include('navbar.ejs') %>
+    <%- include('navbar.ejs') %>.
+    
 
 
     <div class="container">
@@ -88,8 +116,6 @@
         <% }); %>
       </ul>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-9jBjNouoa9U01Sby1HphOJ8euwKPztoLU4arHHpipKdd9XvjTojL6XNayOyZCSnm"
-    crossorigin="anonymous"></script>
+
   </body>
 </html>
