--- a/views/phone.ejs
+++ b/views/phone.ejs
@@ -6,6 +6,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Device Information</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -79,9 +83,59 @@
             border: none;
             border-radius: 4px;
         }
+        
+      .navbar {
+        overflow: hidden;
+        background-color: #333;
+      }
+
+      .navbar a {
+        float: left;
+        display: block;
+        color: #f2f2f2;
+        text-align: center;
+        padding: 14px 20px;
+        text-decoration: none;
+      }
+
+      .navbar a:hover {
+        background-color: #ddd;
+        color: black;
+      }
+
+      .navbar a.active {
+        background-color: #4caf50;
+        color: white;
+      }
+      .navbar {
+    overflow: hidden;
+    background-color: #333;
+    display: flex;
+    justify-content: center; /* Центрирование ссылок внутри навигационного меню */
+}
+
+.navbar a {
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 20px;
+    text-decoration: none;
+    margin: 0 10px; /* Добавление отступа между ссылками */
+}
+.navbar {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 999; /* Устанавливаем более высокий уровень наложения, чтобы навигационное меню было поверх других элементов */
+    overflow: hidden;
+    background-color: #333;
+}
+
     </style>
 </head>
 <body>
+    <%- include('navbar.ejs') %>.
+
     <div class="device-info">
         <div>
             <h1><%= deviceInfo.name %></h1>
