--- a/views/register.ejs
+++ b/views/register.ejs
@@ -6,18 +6,80 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register</title>
+    <style>
+        /* public/stylesheets/register.css */
+
+        body {
+        font-family: Arial, sans-serif;
+        background-color: #f4f4f4;
+        margin: 0;
+        padding: 0;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 100vh;
+        }
+
+        .register-container {
+        text-align: center;
+        }
+
+        h1 {
+        margin-bottom: 20px;
+        }
+
+        form {
+        background-color: #fff;
+        padding: 20px;
+        border-radius: 8px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+
+        label {
+        display: block;
+        margin-bottom: 8px;
+        }
+
+        input {
+        width: 100%;
+        padding: 8px;
+        margin-bottom: 16px;
+        box-sizing: border-box;
+        }
+
+        button {
+        background-color: #007bff;
+        color: #fff;
+        padding: 10px 15px;
+        border: none;
+        border-radius: 4px;
+        cursor: pointer;
+        font-size: 16px;
+        }
+
+        button:hover {
+        background-color: #0056b3;
+        }
+    </style>
 </head>
 <body>
-    <h1>Registration Form</h1>
-    <form id="registerForm" action="/register" method="post">
-        <label for="username">Username:</label>
-        <input type="text" id="username" name="username" required><br><br>
-        
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="password" required><br><br>
-        
-        <button type="submit">Register</button>
-    </form>
+    <div class="register-container">
+        <h1>Register</h1>
+        <form id="registerForm" action="/register" method="post">
+            <div>
+                <label for="username">Username:</label>
+                <input type="text" id="username" name="username" required>
+            </div>
+            <div>
+                <label for="password">Password:</label>
+                <input type="password" id="password" name="password" required>
+            </div>
+            <button type="submit">Register</button>
+        </form>
+        <div id="errorMessage" style="color: red;"></div> 
+        <p>Already have an account? <a href="/login">Sign In</a></p> <!-- Ссылка на страницу входа -->
+
+    </div>
     <script>
             registerForm.addEventListener('submit', async function(event) {
                 event.preventDefault(); 
