--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -120,8 +120,8 @@
         display: block;
       }
       li img {
-    max-width: 100px; /* Установите желаемую максимальную ширину */
-    height: auto; /* Высота будет автоматически подстраиваться для сохранения пропорций */
+    max-width: 100px;
+    height: auto;
   }
 
 
