--- a/views/main.ejs
+++ b/views/main.ejs
@@ -79,8 +79,8 @@
         display: none;
       }
       li img {
-        max-width: 100px; /* Установите желаемую максимальную ширину */
-        height: auto; /* Высота будет автоматически подстраиваться для сохранения пропорций */
+        max-width: 100px; 
+        height: auto; 
       }
       .carousel-caption {
         background: rgba(0, 0, 0, 0.5);
@@ -91,9 +91,9 @@
       .carousel-item img {
         max-width: 100%;
         height: auto;
-        width: 30%; /* Установите желаемую ширину */
-        height: 600px; /* Установите желаемую высоту */
-        object-fit: cover; /* Сохранить пропорции и обрезать изображение, чтобы оно полностью заполнило контейнер */
+        width: 30%; 
+        height: 600px; 
+        object-fit: cover; 
       }
 
       .navbar {
