--- a/views/register.ejs
+++ b/views/register.ejs
@@ -7,7 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register</title>
     <style>
-        /* public/stylesheets/register.css */
 
         body {
         font-family: Arial, sans-serif;
@@ -77,7 +76,7 @@
             <button type="submit">Register</button>
         </form>
         <div id="errorMessage" style="color: red;"></div> 
-        <p>Already have an account? <a href="/login">Sign In</a></p> <!-- Ссылка на страницу входа -->
+        <p>Already have an account? <a href="/login">Sign In</a></p> 
 
     </div>
     <script>
